--- a/package.json
+++ b/package.json
@@ -10,15 +10,13 @@
   },
   "dependencies": {
     "@react-native-community/masked-view": "^0.1.11",
-    "@react-native-firebase/app": "^17.5.0",
-    "@react-native-firebase/firestore": "^17.5.0",
+    "@react-native-firebase/app": "^17.4.2",
+    "@react-native-firebase/firestore": "^17.4.2",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/stack": "^6.3.16",
     "base-64": "^1.0.0",
-    "expo": "~48.0.18",
+    "expo": "^46.0.21",
     "expo-status-bar": "~1.4.4",
-    "firebase": "^9.22.1",
-    "firebaseui": "^6.0.2",
     "react": "18.2.0",
     "react-native": "0.71.8",
     "react-native-gesture-handler": "~2.9.0",
